Add crystal as git submodule at version 1.19.1

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "smlnj"]
 	path = smlnj
 	url = https://github.com/smlnj/smlnj.git
+[submodule "crystal"]
+	path = crystal
+	url = https://github.com/crystal-lang/crystal.git
