meta: track ameba config and beads guidance
Add .ameba.yml to version control, extend AGENTS.md with the quick beads workflow reminder, and ignore local .crystal-cache artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@
 # beads issue tracking (commit only issues.jsonl)
 /.beads/*
 !/.beads/issues.jsonl
+
+# Local Crystal cache (sandbox build artifacts)
+.crystal-cache/
